; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_index.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PyExc_TypeError = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"only integer scalar arrays can be converted to a scalar index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @array_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_index(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @PyArray_ISINTEGER(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @PyArray_NDIM(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @PyExc_TypeError, align 4
  %13 = call i32 @PyErr_SetString(i32 %12, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %19

14:                                               ; preds = %7
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @PyArray_DATA(i32* %16)
  %18 = call i32* @PyArray_GETITEM(i32* %15, i32 %17)
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %14, %11
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32 @PyArray_ISINTEGER(i32*) #1

declare dso_local i64 @PyArray_NDIM(i32*) #1

declare dso_local i32 @PyErr_SetString(i32, i8*) #1

declare dso_local i32* @PyArray_GETITEM(i32*, i32) #1

declare dso_local i32 @PyArray_DATA(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
